#                  -*- Automake -*-
# Process this file with automake to produce a makefile.
#
# Project IROIRO JLQCD package (KEK) 
# Lattice QCD MonteCarlo simulations RNG files
#
# dcmt library
#
# Time-stamp: <2013-04-18 16:48:40 cossu>

dcmtdir = 

CXXFLAGS =  -O3 -I../include -D__STDC_CONSTANT_MACROS=1 
CFLAGS = -O3 -I../include

noinst_LIBRARIES = libdcmt.a
libdcmt_a_SOURCES = 	init.c		\
			check32.c	\
			eqdeg.c		\
			genmtrand.c	\
			mt19937.c	\
			prescr.c	\
			seive.c	

